# endpoint-libs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ws-echo  LICENSE.txt  README.md  TODO.md  docker-compose.yml  fly.toml  package-lock.json  package.json  release.toml  tsconfig.json
.github/workflows/: docker.yml  mirror.yml  rust.yml
docs/: mcp-migration.md
examples/: README.md  mcp_echo.rs  test_ws_echo.sh  test_ws_echo_tls.sh  ws_echo_rustls.rs  ws_echo_ws_client.rs
examples/ws-echo/: Cargo.toml  README.md  main.rs  wrangler.toml
examples/ws-echo/src/: main.rs
examples/ws-echo/worker/: index.ts
scripts/: release.sh  update_readme.sh
src/: lib.rs  libs.rs  model.rs
src/libs/: config.rs  database.rs  datatable.rs  deserializer_wrapper.rs  error_code.rs  handler.rs  listener.rs  log.rs  log_reader.rs  signal.rs  toolbox.rs  types.rs  utils.rs  warn.rs  ws.rs
src/libs/database/: data_thread.rs  pooled.rs
src/libs/log/: error_aggregation.rs  legacy.rs  level_filter.rs  otel.rs  tracing_type_aliases.rs
src/libs/ws/: basics.rs  client.rs  conn.rs  handler.rs  headers.rs  listener.rs  mcp.rs  message.rs  push.rs  role.rs  server.rs  session.rs  subs.rs  tls.rs  toolbox.rs  traits.rs  tungstenite.rs  wtx.rs
src/libs/ws/tungstenite/: client.rs  tls.rs  upgrader.rs
src/libs/ws/wtx/: stream.rs  upgrader.rs
src/model/: endpoint.rs  json_schema.rs  pg_func.rs  types.rs
