[package]
name = "ws-echo"
version = "0.1.0"
edition = "2024"

[dependencies]
endpoint-libs = { path = "../..", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
